# aisets

./: .air.toml  .gitignore  .goreleaser.yaml  CLAUDE.md  DESIGN.md  Makefile  README.md  go.mod  go.sum  install.ps1  install.sh  package-lock.json  package.json  pnpm-lock.yaml
.agents/skills/: .skillshare-manifest.json  ai-task-execution-harness  design-system
.claude/agents/: sql-grandmaster.md
.claude/rules/: commit-verification.md  go-ai-vlm.md  go-catalog-scan.md  go-conventions.md  go-imageproc.md  go-sqlite.md  react-canvas.md  react-data-patterns.md  react-i18n.md  react-streaming.md  react-ui-components.md  rust-imgtools.md
.claude/skills/: .skillshare-manifest.json  capture-lessons  design-system.md
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh  start-dev.sh
.github/: FUNDING.yml  release.yml
.github/workflows/: release.yaml  test.yaml
.husky/: pre-commit
.pi/skills/: .skillshare-manifest.json
.skillshare/: config.yaml
.skillshare/agents/: sql-grandmaster.md
cmd/aisets/: actions_cli.go  cli_helpers.go  data.go  main.go  main_test.go  optimize_cli.go  precheck_cli.go  settings_cli.go  ui.go  ui_process_other.go  ui_process_unix.go  update.go  (+3 more)
scripts/: devc.sh  package-release.sh  precommit-go.sh  precommit-rust.sh
tasks/: plan.md  todo.md
tools/imgtools/: Cargo.toml
tools/imgtools/src/: composite.rs  convert.rs  exif.rs  hash.rs  main.rs  probe.rs  svg.rs  transform.rs  vlm_normalize.rs
tools/imgtools/tests/: cli.rs
ui/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+745 files in other folders)
